--- a/yaml/contest.yaml
+++ b/yaml/contest.yaml
@@ -6,11 +6,11 @@
 name: 'ACM International Collegiate Programming Contest'
 short-name: 'ACM-ICPC'
 elapsed: 0:00:00
-remaining: 5:00:00
+remaining: 3:00:00
 running: false
-start-time: 2017-06-27 16:06:00 CST
+start-time: 2017-08-15 13:20:00 CST
 elapsed: 5:00:00
-scoreboard-freeze: 01:00:00
+scoreboard-freeze: 00:30:00
 # load-data-files: false
 
 default-clars:
@@ -22,7 +22,7 @@ clar-categories:
 languages:
   - name: 'GNU C'
     active: true
-    compilerCmd: 'pc2box -t 20 -m 3584 -s 1024 -d T -u F gcc -O2 -lm -o {:basename}.exe {:mainfile}'
+    compilerCmd: 'pc2box -t 20 -m 3584 -s 1024 -d T -u F gcc -static -O2 -lm -o {:basename}.exe {:mainfile}'
     exemask: '{:basename}.exe'
     execCmd: 'pc2box ./{:basename}.exe'
     runner: 'pc2box'
@@ -33,7 +33,7 @@ languages:
 
   - name: 'GNU C++'
     active: true
-    compilerCmd: 'pc2box -t 20 -m 3584 -s 1024 -d T -u F g++ -O2 -lm -o {:basename}.exe {:mainfile}'
+    compilerCmd: 'pc2box -t 20 -m 3584 -s 1024 -d T -u F g++ -static -O2 -lm -o {:basename}.exe {:mainfile}'
     exemask: '{:basename}.exe'
     execCmd: 'pc2box ./{:basename}.exe'
     runner: 'pc2box'
@@ -44,7 +44,7 @@ languages:
 
   - name: 'GNU C++11'
     active: true
-    compilerCmd: 'pc2box -t 20 -m 3584 -s 1024 -d T -u F g++ -O2 -std=gnu++11 -lm -o {:basename}.exe {:mainfile}'
+    compilerCmd: 'pc2box -t 20 -m 3584 -s 1024 -d T -u F g++ -static -O2 -std=gnu++11 -lm -o {:basename}.exe {:mainfile}'
     exemask: '{:basename}.exe'
     execCmd: 'pc2box ./{:basename}.exe'
     runner: 'pc2box'
@@ -55,7 +55,7 @@ languages:
 
   - name: 'GNU C++14'
     active: true
-    compilerCmd: 'pc2box -t 20 -m 3584 -s 1024 -d T -u F g++ -O2 -std=gnu++14 -lm -o {:basename}.exe {:mainfile}'
+    compilerCmd: 'pc2box -t 20 -m 3584 -s 1024 -d T -u F g++ -static -O2 -std=gnu++14 -lm -o {:basename}.exe {:mainfile}'
     exemask: '{:basename}.exe'
     execCmd: 'pc2box ./{:basename}.exe'
     runner: 'pc2box'
