--- a/yaml/contest.yaml
+++ b/yaml/contest.yaml
@@ -3,8 +3,8 @@
 # Created: 2017-06-27 18:04:29 CST
 --- 
 
-name: 'ACM International Collegiate Programming Contest'
-short-name: 'ACM-ICPC'
+name: '2017 ACM ICPC Asia Hua-Lien Regional Contest'
+short-name: 'HL2017'
 elapsed: 0:00:00
 remaining: 5:00:00
 running: false
